--- a/Ultimate-wayne.html
+++ b/Ultimate-wayne.html
@@ -108,7 +108,7 @@
     <div class="github-section">
         <h2>GitHub Area</h2>
         <p>Check out our projects on GitHub:</p>
-        <a href="https://github.com/your-github-profile" class="github-link">Visit GitHub</a>
+        <a href="https://github.com/Wayneskie" class="github-link">Visit GitHub</a>
     </div>
 
     <!-- Download Section -->
